Fix: scroll width jiggle on mobile 4

--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -16,17 +16,7 @@
   }
 
   h3 {
-    background: linear-gradient(180deg, transparent 25%, rgba(5, 91, 141, 0.904) 100%);
-    padding: 0;
-
-    font-size: var(--fs-3);
-    color: #fff;
-    margin: 0;
-    font-weight: var(--fw-b);
-    text-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
-    padding: 0.5rem 1rem;
-    border-radius: var(--br-sm);
-    pointer-events: auto;
+    text-align: center;
   }
 
   .images {
@@ -36,30 +26,10 @@
 
   img {
     overflow: hidden;
-    position: relative;
     width: 100%;
+    height: 100%;
     max-width: 100%;
-    max-height: 400px;
-    height: auto;
-    object-fit: cover;
-    border-radius: 0;
-    box-shadow: none;
-    margin-bottom: var(--spacer);
   }
-
-  // ...existing code...
-  // Add the new project-banner class
-  .project-banner {
-    width: 100%;
-    max-height: 220px;
-    height: auto;
-    object-fit: cover;
-    border-radius: 0;
-    box-shadow: none;
-    margin-bottom: var(--spacer);
-  }
-
-  // ...existing code...
 
   .content {
     padding: var(--spacer);
@@ -113,7 +83,8 @@
   @media (min-width: 0px) and (max-width: 649px) {
 
     margin: 0 auto;
-   .images {
+
+    .images {
       flex-direction: column;
     }
   }
